# uneex_linux

./: .gitignore
01_TerminalProject/: Makefile  Show.c
02_Multifile/: Makefile  prog.c
03_Text/: randomize.sh
04_Debugging/: Makefile  gdb_range_1.gdb  gdb_range_2.gdb  range.c
05_Regexps/: Makefile  esub.c
06_Tracing/: Makefile  move.c  special_remove.c
07_Environmental/: Makefile.am  configure.ac  rhasher.c
08_I18n/: CMakeLists.txt  Makefile
08_I18n/po/ru/: game.po
08_I18n/src/: game.c
09_PatchDiff/: 0001-Define-W.patch  0002-Define-cells.patch  0003-Define-seed.patch  Makefile  lab1.c
10_LibTesting/: Makefile.am  configure.ac
10_LibTesting/src/: Makefile.am  buf.h  libbuf.c
10_LibTesting/tests/: Makefile.am  tests.ts
11_Documenting/: CMakeLists.txt  Doxyfile.in  Makefile  README.md
11_Documenting/po/ru/: game.po
11_Documenting/src/: game.c  romans.c  romans.h
12_InstallPackaging/: Doxyfile.in  Makefile.am  configure.ac
12_InstallPackaging/include/: constants.h  temperature.h
12_InstallPackaging/po/: POTFILES.in  ru.po
12_InstallPackaging/src/: Makefile.am  main.c  temperature.c
12_InstallPackaging/tests/: Makefile.am  dummy.ts  temperature_tests.ts
